--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
         </div>
     </section>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="block container-9">
             <div class="input">
                 <input type="text" placeholder="Name">
@@ -276,7 +276,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
